--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/button2"
         android:layout_width="162dp"
         android:layout_height="62dp"
-        android:background="#2196F3"
         android:text="tienda"
         android:textColor="#212121"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,8 +54,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.327"
-        />
+        app:layout_constraintVertical_bias="0.327" />
 
     <ImageView
         android:id="@+id/imageView3"
