--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -68,8 +68,9 @@
         android:id="@+id/imageView2"
         android:layout_width="42dp"
         android:layout_height="44dp"
+        android:background="#0E0E0E"
         app:srcCompat="@android:drawable/ic_menu_revert"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="4dp" />
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="1dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
