--- a/app/src/main/res/layout/activity_facil.xml
+++ b/app/src/main/res/layout/activity_facil.xml
@@ -7,4 +7,52 @@
     android:background="@drawable/fondo"
     tools:context=".facil">
 
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="399dp"
+        android:layout_height="115dp"
+        android:background="@drawable/fondodeabajo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:srcCompat="@drawable/fondodeabajo" />
+
+    <ImageView
+        android:id="@+id/imageView14"
+        android:layout_width="97dp"
+        android:layout_height="113dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/p" />
+
+    <ImageView
+        android:id="@+id/imageView15"
+        android:layout_width="107dp"
+        android:layout_height="127dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/i" />
+
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="97dp"
+        android:layout_height="113dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.997"
+        app:srcCompat="@drawable/c" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
