--- a/app/src/main/res/layout/activity_facil.xml
+++ b/app/src/main/res/layout/activity_facil.xml
@@ -112,4 +112,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.98" />
 
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="121dp"
+        android:layout_height="81dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/f" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
