--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/button2"
         android:layout_width="162dp"
         android:layout_height="62dp"
-        android:text="tienda"
+        android:text="@string/boton_tienda"
         android:textColor="#212121"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         android:layout_width="148dp"
         android:layout_height="64dp"
         android:background="#FF0000"
-        android:text="jugar"
+        android:text="@string/boton_jugar"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
