--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -25,7 +25,7 @@
         android:layout_height="57dp"
         android:backgroundTint="#3F51B5"
         android:backgroundTintMode="add"
-        android:text="Dificil"
+        android:text="@string/boton_dificil"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -40,7 +40,7 @@
         android:width="30px"
         android:backgroundTint="#3F51B5"
         android:backgroundTintMode="add"
-        android:text="Intermedio"
+        android:text="@string/boton_intertermedio"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -55,7 +55,7 @@
         android:width="30px"
         android:backgroundTint="#3F51B5"
         android:backgroundTintMode="add"
-        android:text="Facil"
+        android:text="@string/boton_facil"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
